--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,4 +1,71 @@
 body {
-  background: red;
   font-size: 10px;
+
+
+  nav {
+    background-image: url("../resources/pattern-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .searchAndTitle {
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    z-index: 2;
+    top: 35px;
+
+    .title {
+      padding: 20px;
+      color: white;
+      font-size: 20px;
+    }
+
+    .arrowBg {
+      background: #050545E2;
+    }
+  }
+
+
+  .main-content {
+    position: relative;
+    z-index: 20;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: 60%;
+    margin: auto;
+    background: white;
+    padding: 30px;
+    top: 70px;
+    font-size: 18px;
+    border-radius: 12px;
+    box-shadow: 5px 9px 24px -4px rgba(99, 98, 98, 0.66);
+
+    .line {
+      border-left: solid 1px #e8e8e8;
+      padding: 0 30px;
+    }
+
+    .main-title {
+      color: #999999;
+      font-size: 12px;
+      font-weight: bold;
+    }
+
+    .main-subTitle {
+      color: black;
+      font-size: 20px;
+      font-weight: bold;
+    }
+  }
+
+  #issMap {
+    height: 465px;
+    position: relative;
+    z-index: 0;
+  }
+
 }
+
